# GeographicLib-Go

./: .gitmodules  README.md  geographic.go  go.mod
cgo/: CMakeLists.txt  wrapper.cpp
cgo/test/: tesc_c.c  test_cpp.cpp
geographiclib/: geographic.go
include/: wrapper.h
test/: unit_test.go
